# advent-of-code

2020/aoc-rust/: Cargo.toml
2020/aoc-rust/src/: day01.rs  day02.rs  lib.rs  main.rs
2021/aoc-rust/: Cargo.toml  rust-toolchain  toost
2021/aoc-rust/misc/: day16_ast.txt
2021/aoc-rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2024/aoc-rust/: .gitignore  Cargo.toml  rust-toolchain.toml
2024/aoc-rust/src/: day-template.rs  day01.rs  day02.rs  lib.rs  main.rs
2025/aoc-curry/: .gitignore
2025/aoc-curry/day01/src/: Main.curry
2025/aoc-curry/day02/src/: Main.curry
2025/aoc-curry/template/src/: Main.curry
