[package]
name = "aoc-rust-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
num = "0.4.0"
regex = "1.5.4"
text_io = "0.1.9"
itertools = "0.10.1"
flow-control = "0.1.1"
cached = "0.26.2"
hashbrown = "0.11.2"
rayon = "1.5.1"